@@ -209,11 +209,13 @@ define function, begin
 221,setstringbit,3,0,0,0      #set a string bit, such as: visibility, style(stringID,bit,value)
 222,getstringbit,2,0,0        #return a string bit, such as: visibility, style(stringID,bit)
 223,stringcolor,3,0,15,0      #set a string's color,also optional background color(stringID,fColor,bColor)
-224,stringx,1,0               #return a string's X position(stringID) 
+224,stringx,1,0               #return a string's X position(stringID)
 225,stringy,1,0               #return a string's Y position(stringID)
 226,systemday,0               #returns system day
 227,systemmonth,0             #returns system month
 228,systemyear,0              #returns system year
+229,getenemystat,2,0,0        #returns selected stat(enemy,stat)
+230,setenemystat,3,0,0,0      #sets selected stat(enemy,stat,value)
 end
 
 #--------------------------------------------------------------------------
@@ -231,7 +233,7 @@ autonumber,renamehero,1,0           # rename a hero (uses hero:name)
 autonumber,autosave,0               # automatically save in the most recent slot
 autonumber,stringtoglobals,3,0,0,0  #converts string to global(stringID,start,length)
 autonumber,globalstostring,3,0,0,0  #builds strings from globals(stringID,start,length)
-autonumber,showstringat,3,0,0,0     #positions a string on the screen and makes it visible(stringID,x,y) 
+autonumber,showstringat,3,0,0,0     #positions a string on the screen and makes it visible(stringID,x,y)
 autonumber,centerstringat,3,0,0,0   #positions a string on the screen and makes it visible(stringID,x,y)
 autonumber,hidestring,1,0           #makes a visible string invisible(stringID)
 autonumber,stringstyle,2,0,0        #changes a string's style: outline,flat(stringID,style)
